# aoc2020

./: .gitignore  shell.nix
day5/: Main.hs  day5.cabal
day6/: Main.hs  day6.cabal
day7/: Main.hs  day7.cabal
