cabal-version:       >=1.10

name:                day5
version:             0.1.0.0
license-file:        LICENSE
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable day5
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14
  default-language:    Haskell2010
