cabal-version:       >=1.10

name:                day6
version:             0.1.0.0
license-file:        LICENSE
author:              erikbackman
maintainer:          erikbackman@users.noreply.github.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable day6
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14
                     , split
  default-language:    Haskell2010
